apps/skein_compiler/test/skein/conformance/negative/non_exhaustive_option.skein
-- expect: E0024, E0037
-- #261: a non-exhaustive match on Option (missing None) is a compile error.
module NonExhaustiveOption {
  fn run(xs: List[String]) -> String {
    match List.first(xs) {
      Some(x) -> x
    }
  }
}
